--- a/doc/rmd_example/rmd_example.Rmd
+++ b/doc/rmd_example/rmd_example.Rmd
@@ -52,7 +52,7 @@ Note that we define standard deviation (of a sample) as
 
 $$s = sqrt( sum_{i = 1}^n(x_i - \bar{x}) / (n-1))$$
 
-Additionally, note that in Table \@ref(tab:load-data) we consider the sample standard deviation of the number of horses during the same time span as Figure1.
+Additionally, note that in Table \@ref(tab:load-data) we consider the sample standard deviation of the number of horses during the same time span as Figure \@ref(fig:figure1).
 
 ```{r figure2, out.width="50%", fig.align="center", fig.cap="Horse populations for the province with the largest standard deviation"}
 knitr::include_graphics("../../results/horse_pop_plot_largest_sd.png")
